--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+  
+body {
+  /*   background: linear-gradient( rgba(200, 21, 21, 0.418), rgba(160, 2, 2, 0.209) );*/
+    background-image: url('../Resources/IMG_3098.jpg'); 
+   
+  /* background: linear-gradient( rgba(116, 4, 114, 0.502), rgba(117, 3, 100, 0.7) ), url('../Resources/IMG_3098.jpg');
+*/
+    background-position: center;
+    background-attachment: fixed;
+  background-repeat:repeat;
+   background-size:cover;
+  /* width: 100%;
+   height: 100%; */
+  }
+
+  @media (min-width: 768px) {
+    body {
+        background-position: -200px -200px;
+    }
+  }
+
+ 
